Install dev packages :bear:

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
           command: |
             sudo pip install pipenv
             export PIPENV_VENV_IN_PROJECT=~/rocket
-            pipenv install
+            pipenv install --dev
             ls -al
       - save_cache:
           paths:
